--- a/index.html
+++ b/index.html
@@ -1,30 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bicho Chic</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+
     <!-- cabeçalho -->
-<header>
-<nav>
-    <img src="logo.png" alt="Bicho Chic">
-</nav>
-</header>
+    <header>
+        <nav>
+            <img src="" alt="Bicho Chic">
+            
+            <!-- lista não ordenada -->
+            <ul>
+                <li>
+                    <a href="">Todos os Produtos</a>
+                </li>
 
-<!-- conteúdo -->
-<main>
+                <li class="dropdown">
+                    <a href="">Rações</a>
 
-</main>
+                    <div class="dropdown-menu">
+                        <a href="">Filhotes</a>
+                        <a href="">adultos</a>
+                        <a href="">idosos</a>
+                    </div>
+                </li>
 
-<!-- rodapé -->
- <footer>
+                <li class="dropdown">
+                    <a href="">Caixa de Areia e Tapetes</a>
 
- </footer>
+                    <div class="dropdown-menu">
+                        <a href="">Caixa de Areia</a>
+                        <a href="">Areia para gatos</a>
+                        <a href="">Tapetes Higiênicos</a>
+                    </div>
+                </li>
+
+                <li class="dropdown">
+                    <a href="">Acessórios</a>
+
+                    <div class="dropdown-menu">
+                        <a href="">Machos</a>
+                        <a href="">Fêmeas</a>
+                    </div>
+                </li>
+
+                <li class="dropdown">
+                    <a href="">Higiene e Limpeza</a>
+
+                    <div class="dropdown-menu">
+                        <a href="">Higiene Gatos</a>
+                        <a href="">Higiene Cães</a>
+                        <a href="">Limpeza</a>
+                    </div>
+                </li>
+
+            </ul>
+
+        </nav>
+    </header>
+
+    <!-- conteúdo -->
+    <main>
+
+    </main>
+
+    <!-- rodapé -->
+    <footer>
+
+    </footer>
 
 </body>
+
 </html>
