--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                     </div>
                 </li>
 
+                <li>
+                    <a href="">Minha Conta</a>
+                </li>
+
+                <li>
+                    <a href="">Meu carrinho</a>
+                </li>
+
             </ul>
 
         </nav>
