--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- cabeçalho -->
     <header>
         <nav>
-            <img src="" alt="Bicho Chic">
+            <img src="imagens/logo.png" width="180px" alt="Bicho Chic">
             
             <!-- lista não ordenada -->
             <ul>
@@ -74,13 +74,63 @@
     </header>
 
     <!-- conteúdo -->
-    <main>
+    <main>    
+        <div>
+            <img src="imagens/" alt="plano de saúde">
+        </div>
 
+        <!-- seção produtos -->
+        <section>
+            <h2>PRODUTOS EM DESTAQUE</h2>
+            <div>
+                <div>
+                    <img src="imagens/caminha.png" alt="caminha pet">
+                    <p>Cama para Cachorro Geração Animal Donuts Rosa</p>
+                    <p>R$ 144,90</p>
+                </div>
+
+                <div>
+                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt="ração">
+                    <p>Ração Fórmula Natural Life Cães Adultos Médio e Grande 15 kg</p>
+                    <p>R$ 262,71</p>
+                </div>
+                <img src="imagens/coleira.png" alt="coleira">
+                <p>Coleira Anti Enforcamento Meumiau Black</p>
+                <p>R$ 59,90</p>
+                <div>
+
+                    <div>
+                        <img src="imagens/shampoo.png" alt="kit banho cães">
+                        <p>Kit Banho Sanol Dog Shampoo, Condicionador e Colônia 500 ml</p>
+                        <p>R$ 44,82</p>
+                    </div>
+
+                    <div>
+                        <img src="imagens/bravecto.png" alt="anti-pulgas">
+                        <p>Antipulgas e Carrapatos MSD Bravecto para Cães de 10 a 20 Kg</p>
+                        <p>R$280,80</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- rodapé -->
     <footer>
+        <div>
+            <a href="">
+                <img src="imagens/instagram.png" alt="instagram">
+            </a>
 
+            <a href="">
+                <img src="imagens/facebook.png" alt="facebook">
+            </a>
+
+            <a href="">
+                <img src="imagens/tiktok.png" alt="Tiktok">
+            </a>
+        </div>
     </footer>
 
 </body>
