--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
     <!-- cabeçalho -->
     <header>
-        <nav>
-            <img src="imagens/logo.png" width="180px" alt="Bicho Chic">
-            
+        <nav>         
             <!-- lista não ordenada -->
             <ul>
+                <li>
+                        <img src="imagens/logo.png" width="180px" alt="">
+                </li>
                 <li>
                     <a href="">Todos os Produtos</a>
                 </li>
@@ -76,7 +77,9 @@
     <!-- conteúdo -->
     <main>    
         <div>
-            <img src="imagens/" alt="plano de saúde">
+            <a href="">
+                <img src="imagens/plano de saude.png" alt="plano de saúde">
+            </a>
         </div>
 
         <!-- seção produtos -->
