--- a/index.html
+++ b/index.html
@@ -83,32 +83,30 @@
         </div>
 
         <!-- seção produtos -->
-        <section>
+        <section class="secao-produtos">
             <h2>PRODUTOS EM DESTAQUE</h2>
-            <div>
-                <div>
+
+            <div class="container-produtos">
+
+                <div class="card-produto">
                     <img src="imagens/caminha.png" alt="caminha pet">
                     <p>Cama para Cachorro Geração Animal Donuts Rosa</p>
                     <p>R$ 144,90</p>
                 </div>
 
-                <div>
-                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt="ração">
-                    <p>Ração Fórmula Natural Life Cães Adultos Médio e Grande 15 kg</p>
-                    <p>R$ 262,71</p>
-                </div>
+                <div class="card-produto">
                 <img src="imagens/coleira.png" alt="coleira">
                 <p>Coleira Anti Enforcamento Meumiau Black</p>
                 <p>R$ 59,90</p>
-                <div>
+                </div>
 
-                    <div>
+                    <div class="card-produto">
                         <img src="imagens/shampoo.png" alt="kit banho cães">
                         <p>Kit Banho Sanol Dog Shampoo, Condicionador e Colônia 500 ml</p>
                         <p>R$ 44,82</p>
                     </div>
 
-                    <div>
+                    <div class="card-produto">
                         <img src="imagens/bravecto.png" alt="anti-pulgas">
                         <p>Antipulgas e Carrapatos MSD Bravecto para Cães de 10 a 20 Kg</p>
                         <p>R$280,80</p>
@@ -121,18 +119,41 @@
 
     <!-- rodapé -->
     <footer>
+        <div class="footer-rede-social">
+            <a href="">
+                <img src="imagens/instagram.png" alt="instagram" width="70px">
+            </a>
+
+            <a href="">
+                <img src="imagens/facebook.png" alt="facebook" width="70px">
+            </a>
+
+            <a href="">
+                <img src="imagens/tiktok.png" alt="Tiktok" width="70px">
+            </a>
+        </div>
+
+        <div class="footer-info-geral">
+
+            
+        <div class="footer-info">
+            <h4>Ajuda</h4>
+            <a href="">Atendimento</a>
+            <a href="">Meus Pedidos</a>
+            <a href="">Minhas Assinaturas</a>
+            <a href="">Ouvidoria</a>
+        </div>
+
+        <div class="footer-info">
+            <h4>Institucional</h4>
+            <a href="">Institucional</a>
+            <a href="">Sobre a Bicho Chic</a>
+            <a href="">Trabalhe Conosco</a>
+        </div>
+
         <div>
-            <a href="">
-                <img src="imagens/instagram.png" alt="instagram">
-            </a>
-
-            <a href="">
-                <img src="imagens/facebook.png" alt="facebook">
-            </a>
-
-            <a href="">
-                <img src="imagens/tiktok.png" alt="Tiktok">
-            </a>
+            <img src="imagens/logo.png" width="250px" alt="logo">
+        </div>
         </div>
     </footer>
 
