--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main>    
         <div>
             <a href="">
-                <img src="imagens/plano de saude.png" alt="plano de saúde">
+                <img class="img-banner" src="imagens/plano de saude.png" alt="plano de saúde" width="100%">
             </a>
         </div>
 
@@ -115,6 +115,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <!-- rodapé -->
