--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
     <!-- cabeçalho -->
     <header>
-        <nav>         
+
+        <nav>
+            <img src="imagens/logo.png" width="180px" alt="">
+        </nav>
+
+        <nav class="nav">         
             <!-- lista não ordenada -->
             <ul>
-                <li>
-                        <img src="imagens/logo.png" width="180px" alt="">
-                </li>
                 <li>
                     <a href="">Todos os Produtos</a>
                 </li>
