--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <nav>
             <img src="imagens/logo.png" width="180px" alt="">
+            <a href="">Carrinho</a>
         </nav>
 
         <nav class="nav">         
