--- a/index.html
+++ b/index.html
@@ -13,9 +13,28 @@
     <!-- cabeçalho -->
     <header>
 
-        <nav>
+        <nav class="nav-logo">
+
+            <div>
             <img src="imagens/logo.png" width="180px" alt="">
-            <a href="">Carrinho</a>
+            </div>
+            
+        <div class="nav-conta">
+
+             <div>
+            <a href="">MEUS PEDIDOS</a>
+            </div>
+
+            <div>
+            <a href="">LOGIN</a>
+            </div>
+
+            <div>
+                <a href="">MEU CARRINHO</a>
+            </div>
+
+        </div>
+            
         </nav>
 
         <nav class="nav">         
@@ -30,8 +49,8 @@
 
                     <div class="dropdown-menu">
                         <a href="">Filhotes</a>
-                        <a href="">adultos</a>
-                        <a href="">idosos</a>
+                        <a href="">Adultos</a>
+                        <a href="">Idosos</a>
                     </div>
                 </li>
 
@@ -62,14 +81,6 @@
                         <a href="">Higiene Cães</a>
                         <a href="">Limpeza</a>
                     </div>
-                </li>
-
-                <li>
-                    <a href="">Minha Conta</a>
-                </li>
-
-                <li>
-                    <a href="">Meu carrinho</a>
                 </li>
 
             </ul>
