--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bicho Chic</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/exemplo.svg" type="image/svg+xml" />
 </head>
 
 <body>
@@ -100,34 +101,45 @@
         <section class="secao-produtos">
             <h2>PRODUTOS EM DESTAQUE</h2>
 
-            <div class="container-produtos">
-
-                <div class="card-produto">
-                    <img src="imagens/caminha.png" alt="caminha pet">
-                    <p>Cama para Cachorro Geração Animal Donuts Rosa</p>
-                    <p>R$ 144,90</p>
-                </div>
-
-                <div class="card-produto">
-                <img src="imagens/coleira.png" alt="coleira">
-                <p>Coleira Anti Enforcamento Meumiau Black</p>
-                <p>R$ 59,90</p>
-                </div>
-
-                    <div class="card-produto">
-                        <img src="imagens/shampoo.png" alt="kit banho cães">
-                        <p>Kit Banho Sanol Dog Shampoo, Condicionador e Colônia 500 ml</p>
-                        <p>R$ 44,82</p>
+                <div class="container">
+                    <div class="white-box">
+                        <div class="itens">
+                            <div class="item">
+                                <div class="produto">
+                                    <img src="imagens/caminha.png" alt="">
+                                </div>
+                                <h4>Cama para Cachorro Geração Animal Donuts Rosa</h4>
+                                <span>R$ 144,90</span>
+                                <button>Comprar</button>
+                            </div>
+                            <div class="item">
+                                <div class="produto">
+                                    <img src="imagens/caminha.png" alt="">
+                                </div>
+                                <h4>Cama para Cachorro Geração Animal Donuts Rosa</h4>
+                                <span>R$ 144,90</span>
+                                <button>Comprar</button>
+                            </div>
+                            <div class="item">
+                                <div class="produto">
+                                    <img src="imagens/caminha.png" alt="">
+                                </div>
+                                <h4>Cama para Cachorro Geração Animal Donuts Rosa</h4>
+                                <span>R$ 144,90</span>
+                                <button>Comprar</button>
+                            </div>
+                            <div class="item">
+                                <div class="produto">
+                                    <img src="imagens/caminha.png" alt="">
+                                </div>
+                                <h4>Cama para Cachorro Geração Animal Donuts Rosa</h4>
+                                <span>R$ 144,90</span>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="card-produto">
-                        <img src="imagens/bravecto.png" alt="anti-pulgas">
-                        <p>Antipulgas e Carrapatos MSD Bravecto para Cães de 10 a 20 Kg</p>
-                        <p>R$280,80</p>
-                    </div>
-
                 </div>
-            </div>
+
         </section>
 
     </main>
