--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
                                 <span>R$ 144,90</span>
                                 <button>Comprar</button>
                             </div>
+
+
+                            <div class="item">
+                                <div class="produto">
+                                    <img src="imagens/coleira.png" alt="Coleira">
+                                </div>
+                                <h4>Cama para Cachorro Geração Animal Donuts Rosa</h4>
+                                <span>R$ 144,90</span>
+                                <button>Comprar</button>
+                            </div>
+
+
                             <div class="item">
                                 <div class="produto">
                                     <img src="imagens/caminha.png" alt="">
@@ -120,14 +132,8 @@
                                 <span>R$ 144,90</span>
                                 <button>Comprar</button>
                             </div>
-                            <div class="item">
-                                <div class="produto">
-                                    <img src="imagens/caminha.png" alt="">
-                                </div>
-                                <h4>Cama para Cachorro Geração Animal Donuts Rosa</h4>
-                                <span>R$ 144,90</span>
-                                <button>Comprar</button>
-                            </div>
+
+                            
                             <div class="item">
                                 <div class="produto">
                                     <img src="imagens/caminha.png" alt="">
