--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
 
         </section> 
 
+        <div>
+            <a href="">
+                <img class="img-banner-wpp" src="imagens/whatsapp.png" alt="compre pelo whatsapp" width="100%">
+            </a>
+        </div>
+
     </main>
 
     <!-- rodapé -->
