--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav-logo">
 
             <div>
-            <img src="imagens/logo.png" width="180px" alt="">
+            <img src="imagens/logo.png" width="180px" alt="logo">
             </div>
             
         <div class="nav-conta">
