--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bicho Chic</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -41,6 +42,11 @@
 
             <!-- lista não ordenada -->
             <ul>
+
+                <li>
+                    <a href="">Página Inicial</a>
+                </li>
+
                 <li>
                     <a href="">Todos os Produtos</a>
                 </li>
