seção tudo para cachorro

--- a/index.html
+++ b/index.html
@@ -162,6 +162,43 @@
             </a>
         </div>
 
+        <section>
+            <h2>TUDO PARA CACHORRO</h2>
+
+        <div class="tdcachorro">
+
+            <div class="card">
+                <a href="">
+                    <img src="imagens/melhor-petisco-para-cachorro-filhote.png" alt=""></a>
+                    <p>PETISCOS</p>
+            </div>
+
+            <div class="card">
+                <a href="">
+                    <img src="imagens/kithigiene.png" alt=""></a>
+                <p>HIGIENE</p>
+            </div>
+
+            <div class="card">
+                <a href="">
+                    <img src="imagens/cachorro_ouri_o.jpg" alt=""></a>
+                    <p>BRINQUEDOS</p>
+            </div>
+
+            <div class="card">
+                <a href="">
+                    <img src="imagens/otovet.png" alt=""></a>
+                    <p>FARMÁCIA</p>
+            </div>
+
+            <div class="card">
+                <a href="">
+                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt=""></a>
+                    <p>RAÇÃO</p>
+            </div>
+        </div>
+        </section>
+
     </main>
 
     <!-- rodapé -->
