--- a/index.html
+++ b/index.html
@@ -169,32 +169,33 @@
 
             <div class="card">
                 <a href="">
-                    <img src="imagens/melhor-petisco-para-cachorro-filhote.png" alt=""></a>
-                    <p>PETISCOS</p>
+                    <img src="imagens/melhor-petisco-para-cachorro-filhote.png" alt="">
+                </a>
+                
             </div>
 
             <div class="card">
                 <a href="">
-                    <img src="imagens/kithigiene.png" alt=""></a>
-                <p>HIGIENE</p>
+                    <img src="imagens/kithigiene.png" alt="">
+                </a>
             </div>
 
             <div class="card">
                 <a href="">
-                    <img src="imagens/cachorro_ouri_o.jpg" alt=""></a>
-                    <p>BRINQUEDOS</p>
+                    <img src="imagens/cachorro_ouri_o.jpg" alt="">
+                </a>
             </div>
 
             <div class="card">
                 <a href="">
-                    <img src="imagens/otovet.png" alt=""></a>
-                    <p>FARMÁCIA</p>
+                    <img src="imagens/otovet.png" alt="">
+                </a>
             </div>
 
             <div class="card">
                 <a href="">
-                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt=""></a>
-                    <p>RAÇÃO</p>
+                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt="">
+                </a>
             </div>
         </div>
         </section>
