td para cachorro

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             <div class="card">
                 <a href="">
                     <img src="imagens/melhor-petisco-para-cachorro-filhote.png" alt="">
+                    <p>PETISCOS</p>
                 </a>
                 
             </div>
@@ -177,24 +178,28 @@
             <div class="card">
                 <a href="">
                     <img src="imagens/kithigiene.png" alt="">
+                    <p>HIGIENE</p>
                 </a>
             </div>
 
             <div class="card">
                 <a href="">
                     <img src="imagens/cachorro_ouri_o.jpg" alt="">
+                    <p>BRINQUEDOS</p>
                 </a>
             </div>
 
             <div class="card">
                 <a href="">
                     <img src="imagens/otovet.png" alt="">
+                    <p>FARMÁCIA</p>
                 </a>
             </div>
 
             <div class="card">
                 <a href="">
                     <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt="">
+                    <p>RAÇÃO</p>
                 </a>
             </div>
         </div>
