--- a/index.html
+++ b/index.html
@@ -141,10 +141,18 @@
                                 <button>Comprar</button>
                             </div>
 
+                            <div class="item">
+                                <div class="produto">
+                                    <img src="imagens/kitshampoo.png" alt="Kit Shampoo">
+                                </div>
+                                <h4>Kit Banho Sanol Dog Shampoo, Condicionador e Colônia 500 ml</h4>
+                                <span>R$ 44,82</span>
+                                <button>Comprar</button>
+                            </div>
                             
                             <div class="item">
                                 <div class="produto">
-                                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt="">
+                                    <img src="imagens/Racao-Formula-Natural-Caes-Medio-e-Grande_1.png" alt="Ração">
                                 </div>
                                 <h4>Ração Fórmula Natural Life Cães Adultos Médio e Grande 15 kg</h4>
                                 <span>R$ 262,70</span>
