--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 
         </nav>
 
+        <!-- MENU DROPDOWN -->
+
         <nav class="nav">
 
-            <!-- LISTA NAO ORDENADA MENU DROPDOWN -->
+            <!-- LISTA NAO ORDENADA -->
 
             <ul>
 
